# bookfinder-search-engine

./: .gitignore  README.md  app.py  build_index.py  pyproject.toml  requirements.txt  run_search.py
notebooks/: base.ipynb
src/: data_loader.py  preprocessing.py  result.py  search.py  vectorization.py
